# apps-jugoya-ai

./: .gitignore  compile-tailwind.zsh  hello.py  pyproject.toml  render.yaml  requirements.txt
accounts/static/accounts/css/: auth.css
accounts/templates/registration/: login.html
emoji_finder/: apps.py  models.py  urls.py  views.py
emoji_finder/migrations/: 0001_initial.py
emoji_finder/static/emoji_finder/css/: styles.css
emoji_finder/static/emoji_finder/js/: app.js
emoji_finder/templates/emoji_finder/: index.html
facemesh/: apps.py  urls.py  views.py
facemesh/templates/facemesh/: index.html
kalman_filter/: apps.py  urls.py  views.py
kalman_filter/static/kalman_filter/js/: kalman_visualization.js
kalman_filter/templates/kalman_filter/: index.html
keizokuryoku/: apps.py  urls.py  views.py
keizokuryoku/static/keizokuryoku/js/: app.js
keizokuryoku/templates/keizokuryoku/: index.html
main/: settings.py  urls.py
openai_rtc/: apps.py  urls.py  views.py
openai_rtc/migrations/: 0001_initial.py
openai_rtc/static/openai_rtc/js/: webrtc-client.js
openai_rtc/templates/openai_rtc/: index.html
qiita/: apps.py  urls.py  views.py
qiita/templates/qiita/: index.html
read_images/: apps.py  models.py  urls.py  views.py
read_images/migrations/: 0001_initial.py
read_images/templates/read_images/: index.html  results.html
subtitle/: apps.py  models.py  urls.py  views.py
subtitle/templates/subtitle/: index.html  viewer.html
translator/: urls.py  views.py
translator/migrations/: 0001_initial.py
translator/templates/translator/: index.html
(+10 files in other folders)
